--- a/calculator/polls/static/css/style.css
+++ b/calculator/polls/static/css/style.css
@@ -1,5 +1,5 @@
-h2{
-    color: purple;
+body{
+    background-color: gray;
+    font-family:Arial, Helvetica, sans-serif;
+	font-style:italic;
 }
-
-background-color
